add catalog grid

--- a/index.html
+++ b/index.html
@@ -9,12 +9,113 @@
 <body>
 <main>
    <div class="container">
-   <div class="header"></div>
-   <div class="front"></div>
-   <div class="featuredcatalog"></div>
+   <div class="header">
+      <div class="banner1">PAGÁ EN HASTA 12 CUOTAS SIN INTERÉS! REALIZAMOS ENVÍOS A TODO EL PAÍS A DOMICILIO A TRAVÉS DE ANDREANI.</div>
+      <div class="banner2">
+         <div class="left-side">
+         <span>02324-15511814 o 02324-15678892</span>
+         <a href="#" class="contact1">info@bastaprovidencia.com.ar</a>
+      </div>
+      <div class="right-side">
+         <a href="#" class="contact2">Crear cuenta</a>
+         <a href="#" class="contact3">Iniciar sesión</a>
+      </div>
+      </div>
+      <div class="banner3">
+         <a><img src="" alt="logo"></a>
+         <ul>
+            <a href="#" class="items1">Inicio</a>
+            <a href="#" class="items2">Productos</a>
+            <a href="#" class="items3">Contacto</a>
+            <a href="#" class="items4">Quienes Somos</a>
+            <a href="#" class="items5">Mayorista</a>
+         </ul>
+         <input type="text" placeholder="Buscar">
+         <div class="carrito">
+            <img src="" alt="carrito">
+         </div>
+      </div>
+   </div>
+   <div class="front">
+      <img class="front-img" src="/assets/slide-1601651161439-5362476199-06f41345fa8deed43c3b93fc992c4cac1601651166-1920-1920.jpg" alt="">
+   </div>
+      <div class="featured">
+         <div class="featured-items">
+            <img class="product" src="/assets/INGREDIENTS_LDN_Berg_Potter_Plant_Pots_UK_1024x1024.jpg" alt="">
+         </div>
+         <div class="featured-items"><img class="product" src="/assets/INGREDIENTS_LDN_Berg_Potter_Plant_Pots_UK_1024x1024.jpg" alt=""> 
+         </div>
+         <div class="featured-items"><img  class="product" src="/assets/INGREDIENTS_LDN_Berg_Potter_Plant_Pots_UK_1024x1024.jpg" alt="">
+          </div>
+      </div>
+      <div class="catalog">
+         <div class="items-catalog">
+            <img class="items-catalog-img" src="/assets/719Z9rjkTuL._AC_SY450_.jpg" alt="">
+            <div class="subdiv"></div>
+         </div>
+         <div class="items-catalog">
+            <img class="items-catalog-img" src="/assets/719Z9rjkTuL._AC_SY450_.jpg" alt="">
+            <div class="subdiv"></div>
+         </div>
+         <div class="items-catalog">
+            <img class="items-catalog-img" src="/assets/719Z9rjkTuL._AC_SY450_.jpg" alt="">
+            <div class="subdiv"></div>
+         </div>
+         <div class="items-catalog">
+            <img class="items-catalog-img" src="/assets/719Z9rjkTuL._AC_SY450_.jpg" alt="">
+            <div class="subdiv"></div>
+         </div>
+         <div class="items-catalog">
+            <img class="items-catalog-img" src="/assets/719Z9rjkTuL._AC_SY450_.jpg" alt="">
+            <div class="subdiv"></div>
+         </div>
+         <div class="items-catalog">
+            <img class="items-catalog-img" src="/assets/719Z9rjkTuL._AC_SY450_.jpg" alt="">
+            <div class="subdiv"></div>
+         </div>
+         <div class="items-catalog">
+            <img class="items-catalog-img" src="/assets/719Z9rjkTuL._AC_SY450_.jpg" alt="">
+            <div class="subdiv"></div>
+         </div>
+         <div class="items-catalog">
+            <img class="items-catalog-img" src="/assets/719Z9rjkTuL._AC_SY450_.jpg" alt="">
+            <div class="subdiv"></div>
+         </div>
+         <div class="items-catalog">
+            <img class="items-catalog-img" src="/assets/719Z9rjkTuL._AC_SY450_.jpg" alt="">
+            <div class="subdiv"></div>
+         </div>
+         <div class="items-catalog">
+            <img class="items-catalog-img" src="/assets/719Z9rjkTuL._AC_SY450_.jpg" alt="">
+            <div class="subdiv"></div>
+         </div>
+         <div class="items-catalog">
+            <img class="items-catalog-img" src="/assets/719Z9rjkTuL._AC_SY450_.jpg" alt="">
+            <div class="subdiv"></div>
+         </div>
+         <div class="items-catalog">
+            <img class="items-catalog-img" src="/assets/719Z9rjkTuL._AC_SY450_.jpg" alt="">
+            <div class="subdiv"></div>
+         </div>
+         <div class="items-catalog">
+            <img class="items-catalog-img" src="/assets/719Z9rjkTuL._AC_SY450_.jpg" alt="">
+            <div class="subdiv"></div>
+         </div>
+         <div class="items-catalog">
+            <img class="items-catalog-img" src="/assets/719Z9rjkTuL._AC_SY450_.jpg" alt="">
+            <div class="subdiv"></div>
+         </div>
+         <div class="items-catalog">
+            <img class="items-catalog-img" src="/assets/719Z9rjkTuL._AC_SY450_.jpg" alt="">
+            <div class="subdiv"></div>
+         </div>
+      </div>
    <div class="banner"></div>
    <div class="hotsale"></div>
-   <div class="socialmedia"></div>
+   <div class="newsletterFBsub"></div>
+   <div class="followIconsEnvios"></div>
+   <div class="navbarPaymentContact"></div>
+
    <div class="footer"></div>
 </div>
 
